--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "react-transition-group": "^4.0.0",
     "reactstrap": "^8.0.0",
