--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/emersonscheffer/BookSearch#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.4",
     "path": "^0.12.7"
